--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awesome UI</title>
-
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
+    <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -45,7 +49,7 @@
           donec enim, commodo fermum vitae. Et velit sceleris, commodo fermentum
           vitae. Et velit sceleris
         </p>
-        <button type="button">Get started</button>
+        <button class="button" type="button">Get started</button>
         <ul>
           <li>
             <img src="./images/smart-car.svg" alt="" />
