Add lesson 7-8 - Decorative effects and SVG

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <li><a class="header-link" href="#">Team</a></li>
             </ul>
           </nav>
-          <button class="button" type="button">Register</button>
+          <button class="button button-small" type="button">Register</button>
         </div>
       </div>
     </header>
@@ -54,7 +54,12 @@
                 et eros, pellentesque et. Tristique ullamcorper ac pharetra in
                 nisi sit vivamus lorem.
               </p>
-              <button class="button" type="button">Get started</button>
+              <button class="button" type="button">
+                Get started
+                <svg width="24" height="16">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </button>
             </div>
             <img src="./images/hero-image.png" alt="Woman is playing tennis" />
           </div>
@@ -74,11 +79,9 @@
           <ul>
             <li>
               <div class="advantage-card">
-                <img
-                  class="advantage-card-img"
-                  src="./images/smart-car.svg"
-                  alt=""
-                />
+                <svg class="advantage-card-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-smart-car"></use>
+                </svg>
                 <h3 class="advantage-card-title">Car Rental</h3>
                 <p class="advantage-card-text">
                   Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit
@@ -125,46 +128,40 @@
           <p class="heading-subtitle">What we can apply</p>
           <ul class="features-list">
             <li class="features-item">
-              <h3>MOT consectet</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
-                quis vitae
-              </p>
+              <div class="feature-card">
+                <svg class="feature-card-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-python"></use>
+                </svg>
+                <h3>MOT consectet</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
+                  quis vitae
+                </p>
+              </div>
             </li>
             <li class="features-item">
-              <h3>MOT consectet</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
-                quis vitae
-              </p>
+              <div class="feature-card">
+                <svg class="feature-card-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-iost"></use>
+                </svg>
+                <h3>MOT consectet</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
+                  quis vitae
+                </p>
+              </div>
             </li>
             <li class="features-item">
-              <h3>MOT consectet</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
-                quis vitae
-              </p>
-            </li>
-            <li class="features-item">
-              <h3>MOT consectet</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
-                quis vitae
-              </p>
-            </li>
-            <li class="features-item">
-              <h3>MOT consectet</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
-                quis vitae
-              </p>
-            </li>
-            <li class="features-item">
-              <h3>MOT consectet</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
-                quis vitae
-              </p>
+              <div class="feature-card">
+                <svg class="feature-card-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-stacks"></use>
+                </svg>
+                <h3>MOT consectet</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
+                  quis vitae
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -232,18 +229,34 @@
         <p>Copyright &copy; 2022 AWESOME</p>
         <p>All rights reserved</p>
         <address>
-          <ul>
-            <li>
-              <a href="#"></a>
+          <ul class="socials-list">
+            <li class="socials-item">
+              <a class="socials-link" href="#">
+                <svg width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="#"></a>
+            <li class="socials-item">
+              <a class="socials-link" href="#">
+                <svg width="16" height="16">
+                  <use href="./images/icons.svg#icon-dribble"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="#"></a>
+            <li class="socials-item">
+              <a class="socials-link" href="#">
+                <svg width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="#"></a>
+            <li class="socials-item">
+              <a class="socials-link" href="#">
+                <svg width="16" height="16">
+                  <use href="./images/icons.svg#icon-youtube"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </address>
