--- a/test.html
+++ b/test.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./css/test.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <div class="box">1</div>
-      <div class="box">2</div>
-      <div class="box">3</div>
-      <div class="box">4</div>
-    </div>
+    <!-- <section class="section">
+      <h1>Lorem ipsum dolor sit amet, consectetur adipisicing</h1>
+    </section> -->
+    <!-- <div class="box"> -->
+    <img class="box-img" src="https://picsum.photos/id/203/1000/400" alt="" />
+    <!-- </div> -->
+    <!-- <p class="text">Lorem ipsum dolor sit amet</p> -->
   </body>
 </html>
