Add lesson 9 - Positioning

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
             </li>
             <li>
               <div class="advantage-card">
-                <img src="./images/smart-car.svg" alt="" />
+                <svg class="advantage-card-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-ship"></use>
+                </svg>
                 <h3>Car Rental</h3>
                 <p>
                   Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit
@@ -101,7 +103,9 @@
             </li>
             <li>
               <div class="advantage-card">
-                <img src="./images/smart-car.svg" alt="" />
+                <svg class="advantage-card-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-bus"></use>
+                </svg>
                 <h3>Car Rental</h3>
                 <p>
                   Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit
@@ -111,7 +115,9 @@
             </li>
             <li>
               <div class="advantage-card">
-                <img src="./images/smart-car.svg" alt="" />
+                <svg class="advantage-card-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-driving"></use>
+                </svg>
                 <h3>Car Rental</h3>
                 <p>
                   Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit
